--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "use-debounce": "^10.0.0",
     "wouter": "^3.0.0",
     "zod": "^3.22.4"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "react-blueprint-svg@0.10.0": "patches/react-blueprint-svg@0.10.0.patch"
+    }
   }
 }
