--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "analyze": "vite-bundle-visualizer"
+    "analyze": "vite-bundle-visualizer",
+    "precompute": "tsx ./src/svg/script.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -15,6 +16,7 @@
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.4.0",
     "sass": "^1.70.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.3",
     "vite-bundle-visualizer": "^1.0.1",
