--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "analyze": "vite-bundle-visualizer",
-    "precompute": "tsx ./src/svg/script.ts"
+    "analyze": "vite-bundle-visualizer"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -16,7 +15,6 @@
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.4.0",
     "sass": "^1.70.0",
-    "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.3",
     "vite-bundle-visualizer": "^1.0.1",
