--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
       "@schema": ["src/schema.ts"],
       "@guides": ["src/guides/index.tsx"],
       "@presets": ["src/presets/index.ts"],
-      "@tree": ["src/tree.ts"],
+      "@tree/*": ["src/tree/*"],
       "@constants": ["src/constants.ts"],
     }
   },
