--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.23.3",
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.4.0",
+    "dxf-parser": "^1.1.2",
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.3",
