--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
+    /* JS Type-Checking */
+    "allowJs": true,
+    "checkJs": true,
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
